# -Optimization-of-neural-networks-using-sparse-matrices

neutral_networks_optimalization/: .gitignore  Cargo.toml  network.json
neutral_networks_optimalization/src/: activations.rs  fileManager.rs  main.rs  matrix.rs  network.rs  structure.rs  visualiser.rs
