[package]
name = "neutral_networks_optimalization"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = "0.15"
sprs = "0.11"
nalgebra = "0.30"
nalgebra-sparse = "0.9"
rand = "0.8"
autograd = "0.1" #sprawdz
winapi = { version = "0.3", features = ["winuser"] }
eframe = { version = "0.22", features = ["glow"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
